--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ article div {
 
 .line {
     background: grey;
-    width: 98vw;
+    width: 90vw;
     height: 1px;
 }
 
@@ -79,7 +79,16 @@ footer {
 @media (max-width: 550px) {
     article {
         flex-direction: column;
-        align-items: flex-start;
-        justify-content: flex-start;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        gap: 12px;
     }
+}
+
+main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
